Enable more models for Perf Analysis notebooks and add auto testing for notebooks

--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Check TensorFlow version and MKL enablement"
+    "## Step 1: Check TensorFlow version and oneDNN enablement"
    ]
   },
   {
@@ -125,9 +125,9 @@
     "major_version = int(tf.__version__.split(\".\")[0])\n",
     "if major_version >= 2:\n",
     "   from tensorflow.python import _pywrap_util_port\n",
-    "   print(\"MKL enabled:\", _pywrap_util_port.IsMklEnabled())\n",
+    "   print(\"oneDNN enabled:\", _pywrap_util_port.IsMklEnabled())\n",
     "else:\n",
-    "   print(\"MKL enabled:\", tf.pywrap_tensorflow.IsMklEnabled())"
+    "   print(\"oneDNN enabled:\", tf.pywrap_tensorflow.IsMklEnabled())"
    ]
   },
   {
@@ -148,32 +148,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Set accuracy_only to True if needed\n",
+    "By default, we benchmark the topology for throughput only. Please set accuracy_only to True if you also want to get accuracy number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_only=False\n",
+    "# overwrite the accuracy_only value by the \"ACCURACY_ENABLE\" environment variable.\n",
+    "import os\n",
+    "accuracy_enable=os.environ.get('ACCURACY_ENABLE', '')\n",
+    "if accuracy_enable != '':\n",
+    "    accuracy_only= eval(accuracy_enable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List out all supported benchmarks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "from profiling.profile_utils import ConfigFile\n",
-    "\n",
-    "accuracy_only=False\n",
-    "\n",
+    "from profiling.profile_utils import ConfigFile, CSVCommonUtils\n",
     "config = ConfigFile()\n",
-    "df, df_types, df_types_obj = config.convert_configs_to_pd_dataframe()\n",
+    "df, df_types, df_types_obj = config.convert_configs_to_pd_dataframe(accuracy_only=accuracy_only)\n",
     "\n",
     "name_list = []\n",
-    "\n",
+    "precision_list = []\n",
     "for name,group in df_types_obj:\n",
     "    name_list.append(name)\n",
+    "\n",
+    "cache_csv_file = \"cache.csv\"\n",
+    "fnames = ['csv_fname_list', 'selected_precision_list']\n",
+    "if os.path.isfile(cache_csv_file) is False:#only initialize list for the first run among data types\n",
+    "    # Initial CSV files list\n",
+    "    csv_fname_list = []\n",
+    "    selected_precision_list=[]\n",
+    "    cachecsv = CSVCommonUtils(fnames, cache_csv_file)\n",
+    "else:\n",
+    "    cachecsv = CSVCommonUtils(fnames, cache_csv_file)\n",
+    "    csv_fname_list, selected_precision_list = cachecsv.read_from_csv()\n",
+    "\n",
+    "print(csv_fname_list)\n",
+    "print(selected_precision_list)\n",
+    "    \n",
     "print(\" Benchmark that supports multiple data types :\")\n",
     "index=0\n",
     "for name in name_list:\n",
     "    print(' Index %d : %s' %(index, name))\n",
-    "    index +=1\n",
-    "# Initial CSV files list\n",
-    "csv_fname_list = []\n",
-    "precision_list = []\n",
-    "selected_precision_list=[]"
+    "    index +=1"
    ]
   },
   {
@@ -185,14 +222,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The User needs to pick a topology for the first run."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# User picks a benchmark type\n",
-    "## USER INPUT\n",
-    "selected_index = 0"
+    "# use the \"TOPO_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_topo_index=os.environ.get('TOPO_INDEX', '')\n",
+    "if env_topo_index != '':\n",
+    "    selected_index= int(env_topo_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    selected_index= int(input('Input a index number of a topology: '))\n",
+    "os.environ['TOPO_INDEX']=str(selected_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "show the selected topology."
    ]
   },
   {
@@ -266,8 +324,12 @@
    "outputs": [],
    "source": [
     "# User picks a data type for selected benchmark type\n",
-    "## USER INPUT\n",
-    "data_type_index = 0"
+    "if len(csv_fname_list) == 0: #only for the first run among data types\n",
+    "    data_type_index = 0\n",
+    "# overwrite the accuracy_only value by the \"ACCURACY_ENABLE\" environment variable.\n",
+    "env_data_type_index=os.environ.get('DATA_TYPE_INDEX', '')\n",
+    "if env_data_type_index != '':\n",
+    "    data_type_index= int(env_data_type_index)"
    ]
   },
   {
@@ -284,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data_type_index > len(precision_df):\n",
+    "if data_type_index >= len(precision_df):\n",
     "    print(\"Please select a valid index number.\")\n",
     "else:\n",
     "    topology_name = selected_df.iloc[data_type_index]['benchmark']\n",
@@ -380,6 +442,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Here are some performance optimzation BKMs for your reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the parameters from config\n",
+    "config = ConfigFile()\n",
+    "config.read_config(topology_name)\n",
+    "if config.perf_bkm != '':\n",
+    "    print(config.perf_bkm)\n",
+    "else:\n",
+    "    print(\"No BKM for this topology\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -390,7 +474,7 @@
     "utilized_socket_number=socket_number\n",
     "num_inter_threads = inter_thread\n",
     "num_intra_threads = thread_number\n",
-    "batch_size=32\n",
+    "batch_size=config.batch_size # Used recommended batch_size if any. Users can overwrite the value of batch_size\n",
     "log_folder=os.getcwd() + os.sep + \"logs\""
    ]
   },
@@ -403,22 +487,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optional ACTION: Users input the folder paths for those required data and files\n",
+    "1. data_download_path: the value will be set as data-location parameters in topo.ini for the related topology.\n",
+    "2. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology such as Wide and Deep. Those models use tensorflow-models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "# Get the parameters from config\n",
     "config = ConfigFile()\n",
     "config.read_config(topology_name)\n",
-    "if config.data_download != '' and config.data_location == '':\n",
+    "data_download_path=''\n",
+    "model_source_dir=''\n",
+    "if ( config.data_download != '' or (config.data_download_accuracy != '' and accuracy_only is True) ) and config.data_location == '':\n",
     "    print(\"\\nPlease follow below command to get the data : \")\n",
-    "    val = config.read_value_from_section(topology_name, 'data-download')\n",
+    "    val = config.read_value_from_section(topology_name, 'data-download') if config.data_download != '' else config.read_value_from_section(topology_name, 'data-download-accuracy')\n",
     "    print(val)\n",
+    "    # use the \"DATA_DOWNLOAD_PATH\" environment variable value if it exists.\n",
+    "    env_data_download_path=os.environ.get('DATA_DOWNLOAD_PATH', '')\n",
+    "    if env_data_download_path != '':\n",
+    "        data_download_path= env_data_download_path\n",
+    "    else:\n",
+    "        ## USER INPUT\n",
+    "        data_download_path= input('Input a data download path: ')\n",
+    "    print(\" data download path : \" , data_download_path)\n",
+    "\n",
     "if config.preprocessing != '':\n",
     "    print(\"\\nPlease follow below command to get required files and installation : \")\n",
     "    val = config.read_value_from_section(topology_name, 'preprocessing')\n",
-    "    print(val)"
+    "    print(val)\n",
+    "    # use the \"MODEL_SOURCE_DIR\" environment variable value if it exists.\n",
+    "    env_model_source_dir=os.environ.get('MODEL_SOURCE_DIR', '')\n",
+    "    if env_model_source_dir != '':\n",
+    "        model_source_dir= env_model_source_dir\n",
+    "    else:\n",
+    "        ## USER INPUT\n",
+    "        model_source_dir= input('Input a model source dir: ')\n",
+    "    print(\" model_source_dir : \" , model_source_dir)"
    ]
   },
   {
@@ -432,9 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (OPTIONAL) ACTION: Users set the configurations in topo.ini for those required data and files\n",
-    "1. data_download_path: the value will be set as the data-location parameter in topo.ini for the related topology\n",
-    "2. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology such as Wide and Deep. Those models use tensorflow-models."
+    "#### Users set the configurations in topo.ini for those required data and files\n"
    ]
   },
   {
@@ -443,24 +554,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## USER INPUT\n",
-    "data_download_path = ''\n",
-    "model_source_dir = ''\n",
     "\n",
     "# Overwrite configurations in topo.ini\n",
     "config = ConfigFile()\n",
     "config.read_config(topology_name)\n",
     "\n",
-    "# data-location\n",
-    "if config.data_download != '':\n",
+    "if ( config.data_download != '' or (config.data_download_accuracy != '' and accuracy_only is True) ) and data_download_path != '':\n",
     "    config.write_value_from_section(topology_name, 'data-location', data_download_path)\n",
     "    config.data_location = data_download_path\n",
     "\n",
-    "# need data to get accuracy number\n",
     "if accuracy_only == True and config.data_location == '':\n",
     "    print(\"ERROR! STOP! need data for accuacy evaluatoin!\")  \n",
-    "   \n",
-    "# model-source-dir    \n",
+    "\n",
     "if config.preprocessing != '':\n",
     "    config.write_value_from_section(topology_name, 'model-source-dir', model_source_dir)    \n"
    ]
@@ -500,6 +605,7 @@
     "    if config.in_graph == 'NA':\n",
     "        config.checkpoint = pretrain_model_path        \n",
     "    if config.checkpoint == 'NA':\n",
+    "        pretrain_model_path = config.find_pretrained_model_in_folder(pretrain_model_path)\n",
     "        config.in_graph = pretrain_model_path \n",
     "# set pre-trained model path        \n",
     "if config.checkpoint == 'NA':\n",
@@ -513,6 +619,12 @@
     "if log_folder !='':\n",
     "    configvals.append(\"--output-dir\")\n",
     "    configvals.append(log_folder)\n",
+    "\n",
+    "# Add custom arguments\n",
+    "if config.custom_args != '':\n",
+    "    configvals.append(\"--\")\n",
+    "    custom_config = config.parsing_custom_args(topology_name, config.custom_args)\n",
+    "    configvals = configvals + custom_config\n",
     "\n",
     "# Combine common parameters and config parameters\n",
     "params = params + configvals    \n",
@@ -554,20 +666,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.6: Retrieve MKLDNN Runtime Information\n",
-    "> NOTE : performance may be impacted if users enable those MKLDNN debug features."
+    "### Step 4.6: Retrieve oneDNN Runtime Information\n",
+    "> NOTE : performance may be impacted if users enable those oneDNN debug features."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Users can enable MKLDNN VERBOSE Mode to have more information from MKLDNN library.  \n",
-    "Users can export the MKLDNN_VERBOSE environment variable to turn verbose mode on and control the level of verbosity.\n",
+    "Users can enable oneDNN VERBOSE Mode to have more information from oneDNN library.  \n",
+    "Users can export the DNNL_VERBOSE environment variable to turn verbose mode on and control the level of verbosity.\n",
     "\n",
     "|Environment variable|Value|Description|\n",
     "|:-----|:----|:-----|\n",
-    "|MKLDNN_VERBOSE| 0 |no verbose output (default)|\n",
+    "|DNNL_VERBOSE| 0 |no verbose output (default)|\n",
     "||1|primitive information at execution|\n",
     "||2|primitive information at creation and execution|  \n",
     "\n",
@@ -580,14 +692,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['MKLDNN_VERBOSE'] = '1'"
+    "os.environ['DNNL_VERBOSE'] = '1'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Users can use the DNNL_JIT_DUMP environment variable to inspect MKLDNN JIT code,  \n",
+    "Users can use the DNNL_JIT_DUMP environment variable to inspect oneDNN JIT code,  \n",
     "and then check instructions usage by dissassembling the JIT kernel.\n",
     "\n",
     "|Environment variable|Value|Description|\n",
@@ -611,7 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['MKLDNN_JIT_DUMP'] = '0'"
+    "os.environ['DNNL_JIT_DUMP'] = '0'"
    ]
   },
   {
@@ -642,7 +754,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enable_tf_timeline = True"
+    "enable_tf_timeline = True\n",
+    "# overwrite the accuracy_only value by the \"ENABLE_TIMELINE\" environment variable.\n",
+    "timeline_enable=os.environ.get('ENABLE_TIMELINE', '')\n",
+    "if timeline_enable != '':\n",
+    "    enable_tf_timeline= eval(timeline_enable)"
    ]
   },
   {
@@ -730,7 +846,8 @@
     "    print(\"get throughput\")\n",
     "    val = config.throughput_keyword\n",
     "    index = int(config.throughput_index)\n",
-    "    line = perfp.read_throughput(used_logpath, keyword=val, index=index)\n",
+    "    splitter = config.throughput_splitter\n",
+    "    line = perfp.read_throughput(used_logpath, keyword=val, index=index, splitter=splitter)\n",
     "    if line!=None:\n",
     "        throughput=line\n",
     "        print(throughput)\n",
@@ -769,9 +886,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logfile = open(used_logpath)\n",
-    "logout = logfile.read()\n",
-    "print(logout)"
+    "print_out_log = False\n",
+    "if print_out_log is True:\n",
+    "    logfile = open(used_logpath)\n",
+    "    logout = logfile.read()\n",
+    "    print(logout)"
    ]
   },
   {
@@ -805,7 +924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Users should be able to see new JIT DUMP files after running the benchmark if they enable the MKLDNN JIT DUMP feature.\n"
+    "#### Users should be able to see new JIT DUMP files after running the benchmark if they enable the oneDNN JIT DUMP feature.\n"
    ]
   },
   {
@@ -822,7 +941,7 @@
     "pattern = \"*.bin\"\n",
     "jitdump_files, jitdump_paths = utils.found_files_in_folders(pattern, paths)\n",
     "if jitdump_paths == []:\n",
-    "    print(\"No %s files found\" %(pattern) ,\"Need to set MKLDNN_JIT_DUMP as 1 first\")\n",
+    "    print(\"No %s files found\" %(pattern) ,\"Need to set DNNL_JIT_DUMP as 1 first\")\n",
     "else:\n",
     "    print(jitdump_paths)"
    ]
@@ -852,6 +971,8 @@
     "    for path in jitdump_paths:\n",
     "        shutil.move(path,jitdump_dir_path)\n",
     "target_path = jitdump_dir_path+'_'+os.environ['SELECTED_TYPE']\n",
+    "if os.path.isfile(target_path) == True:\n",
+    "    os.remove(target_path)\n",
     "shutil.move(jitdump_dir_path, target_path)\n",
     "print(target_path)\n",
     "    "
@@ -867,6 +988,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = [csv_fname_list[-1], selected_precision_list[-1]]\n",
+    "cachecsv.write_to_csv(fname)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -879,14 +1010,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_type_index +=1"
+    "data_type_index +=1\n",
+    "if data_type_index < len(precision_list):\n",
+    "    os.environ['DATA_TYPE_INDEX'] = str(data_type_index)\n",
+    "else:\n",
+    "    os.environ['DATA_TYPE_INDEX'] = ''\n",
+    "    os.environ['TOPO_INDEX'] = ''\n",
+    "    cachecsv.delete_csv()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Go back Step 3.3 by clicking the link : [Step 3.3](#step_3_3)."
+    "> Go back Step 3.3 by clicking the link : [Step 3.3](#step_3_3) or run below cell to automatically go over all steps for next date type"
    ]
   },
   {
@@ -964,8 +1101,8 @@
     "import datetime\n",
     "from profiling.profile_utils import CommonUtils\n",
     "utils = CommonUtils()\n",
-    "\n",
-    "if timeline_paths != []:\n",
+    "print(len(precision_list))\n",
+    "if timeline_paths != [] and len(timeline_paths) >= len(precision_list):\n",
     "    timeline_dir_path = os.environ['ModelZooRoot']+os.sep + \"docs/notebooks/perf_analysis\" + os.sep + \"Timeline\"\n",
     "    if os.path.isfile(timeline_dir_path) == False:\n",
     "        os.mkdir(timeline_dir_path)\n",
@@ -981,7 +1118,8 @@
     "    timeinfo = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M\")\n",
     "    target_path = timeline_dir_path+'_'+os.environ['SELECTED_TOPO']+'_'+timeinfo\n",
     "    shutil.move(timeline_dir_path, target_path)\n",
-    "    print(target_path)"
+    "    cachecsv.delete_csv()\n",
+    "    print(\"Successfully gather all results in \",target_path)"
    ]
   },
   {
@@ -1008,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
