--- a/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Check TensorFlow version and MKL enablement"
+    "## Step 1: Check TensorFlow version and oneDNN enablement"
    ]
   },
   {
@@ -125,10 +125,10 @@
     "major_version = int(tf.__version__.split(\".\")[0])\n",
     "if major_version >= 2:\n",
     "    from tensorflow.python import _pywrap_util_port\n",
-    "    on_mkl = _pywrap_util_port.IsMklEnabled()\n",
+    "    on_onednn = _pywrap_util_port.IsMklEnabled()\n",
     "else:\n",
-    "    on_mkl = tf.pywrap_tensorflow.IsMklEnabled()\n",
-    "print(\"MKL enabled:\", on_mkl)"
+    "    on_onednn = tf.pywrap_tensorflow.IsMklEnabled()\n",
+    "print(\"oneDNN enabled:\", on_onednn)"
    ]
   },
   {
@@ -146,6 +146,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Set accuracy_only to True if needed\n",
+    "By default, we benchmark the topology for throughput only. Please set accuracy_only to True if you also want to get accuracy number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_only=False\n",
+    "# overwrite the accuracy_only value by the \"ACCURACY_ENABLE\" environment variable.\n",
+    "import os\n",
+    "accuracy_enable=os.environ.get('ACCURACY_ENABLE', '')\n",
+    "if accuracy_enable != '':\n",
+    "    accuracy_only= eval(accuracy_enable)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -153,8 +175,6 @@
    "source": [
     "import sys\n",
     "from profiling.profile_utils import ConfigFile\n",
-    "\n",
-    "accuracy_only=False\n",
     "\n",
     "config = ConfigFile()\n",
     "sections = config.read_supported_section(accuracy_only=accuracy_only)\n",
@@ -179,9 +199,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User picks a topology, Batch Size, and number of required threads\n",
-    "## USER INPUT\n",
-    "topo_index=0"
+    "# use the \"TOPO_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_topo_index=os.environ.get('TOPO_INDEX', '')\n",
+    "if env_topo_index != '':\n",
+    "    topo_index= int(env_topo_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    topo_index= int(input('Input a index number of a topology: '))"
    ]
   },
   {
@@ -263,6 +288,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Here are some performance optimzation BKMs for your reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the parameters from config\n",
+    "config = ConfigFile()\n",
+    "config.read_config(topology_name)\n",
+    "if config.perf_bkm != '':\n",
+    "    print(config.perf_bkm)\n",
+    "else:\n",
+    "    print(\"No BKM for this topology\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -273,7 +320,7 @@
     "utilized_socket_number=socket_number\n",
     "num_inter_threads = inter_thread\n",
     "num_intra_threads = thread_number\n",
-    "batch_size=32\n",
+    "batch_size=config.batch_size # Used recommended batch_size if any. Users can overwrite the value of batch_size\n",
     "log_folder=os.getcwd() + os.sep + \"logs\""
    ]
   },
@@ -286,29 +333,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the parameters from config\n",
-    "config = ConfigFile()\n",
-    "config.read_config(topology_name)\n",
-    "if config.data_download != '' and config.data_location == '':\n",
-    "    print(\"\\nPlease follow below command to get the data : \")\n",
-    "    val = config.read_value_from_section(topology_name, 'data-download')\n",
-    "    print(val)\n",
-    "if config.preprocessing != '':\n",
-    "    print(\"\\nPlease follow below command to get required files and installation : \")\n",
-    "    val = config.read_value_from_section(topology_name, 'preprocessing')\n",
-    "    print(val)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ACTION: Users set the configuration in topo.ini for those required data and files\n",
+    "#### Optional ACTION: Users input the folder paths for those required data and files\n",
     "1. data_download_path: the value will be set as data-location parameters in topo.ini for the related topology.\n",
     "2. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology such as Wide and Deep. Those models use tensorflow-models."
    ]
@@ -319,15 +347,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## USER INPUT\n",
-    "data_download_path = ''\n",
-    "model_source_dir = ''\n",
+    "import os\n",
+    "# Get the parameters from config\n",
+    "config = ConfigFile()\n",
+    "config.read_config(topology_name)\n",
+    "data_download_path=''\n",
+    "model_source_dir=''\n",
+    "if ( config.data_download != '' or (config.data_download_accuracy != '' and accuracy_only is True) ) and config.data_location == '':\n",
+    "    print(\"\\nPlease follow below command to get the data : \")\n",
+    "    val = config.read_value_from_section(topology_name, 'data-download') if config.data_download != '' else config.read_value_from_section(topology_name, 'data-download-accuracy')\n",
+    "    print(val)\n",
+    "    # use the \"DATA_DOWNLOAD_PATH\" environment variable value if it exists.\n",
+    "    env_data_download_path=os.environ.get('DATA_DOWNLOAD_PATH', '')\n",
+    "    if env_data_download_path != '':\n",
+    "        data_download_path= env_data_download_path\n",
+    "    else:\n",
+    "        ## USER INPUT\n",
+    "        data_download_path= input('Input a data download path: ')\n",
+    "    print(\" data download path : \" , data_download_path)\n",
+    "\n",
+    "if config.preprocessing != '':\n",
+    "    print(\"\\nPlease follow below command to get required files and installation : \")\n",
+    "    val = config.read_value_from_section(topology_name, 'preprocessing')\n",
+    "    print(val)\n",
+    "    # use the \"MODEL_SOURCE_DIR\" environment variable value if it exists.\n",
+    "    env_model_source_dir=os.environ.get('MODEL_SOURCE_DIR', '')\n",
+    "    if env_model_source_dir != '':\n",
+    "        model_source_dir= env_model_source_dir\n",
+    "    else:\n",
+    "        ## USER INPUT\n",
+    "        model_source_dir= input('Input a model source dir: ')\n",
+    "    print(\" model_source_dir : \" , model_source_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  set the configuration in topo.ini for those required data and files\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Overwrite configurations in topo.ini\n",
     "config = ConfigFile()\n",
     "config.read_config(topology_name)\n",
     "\n",
-    "if config.data_download != '' and data_download_path != '':\n",
+    "if ( config.data_download != '' or (config.data_download_accuracy != '' and accuracy_only is True) ) and data_download_path != '': \n",
     "    config.write_value_from_section(topology_name, 'data-location', data_download_path)\n",
     "    config.data_location = data_download_path\n",
     "    \n",
@@ -372,6 +443,7 @@
     "    if config.in_graph == 'NA':\n",
     "        config.checkpoint = pretrain_model_path        \n",
     "    if config.checkpoint == 'NA':\n",
+    "        pretrain_model_path = config.find_pretrained_model_in_folder(pretrain_model_path)\n",
     "        config.in_graph = pretrain_model_path \n",
     "# set pre-trained model path        \n",
     "if config.checkpoint == 'NA':\n",
@@ -386,6 +458,12 @@
     "    configvals.append(\"--output-dir\")\n",
     "    configvals.append(log_folder)\n",
     "\n",
+    "# Add custom arguments\n",
+    "if config.custom_args != '':\n",
+    "    configvals.append(\"--\")\n",
+    "    custom_config = config.parsing_custom_args(topology_name, config.custom_args)\n",
+    "    configvals = configvals + custom_config\n",
+    "    \n",
     "# Combine common parameters and config parameters\n",
     "params = params + configvals    \n",
     "    \n",
@@ -440,7 +518,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enable_tf_timeline = True"
+    "enable_tf_timeline = True\n",
+    "\n",
+    "# overwrite the accuracy_only value by the \"ACCURACY_ENABLE\" environment variable.\n",
+    "timeline_enable=os.environ.get('ENABLE_TIMELINE', '')\n",
+    "if timeline_enable != '':\n",
+    "    enable_tf_timeline= eval(timeline_enable)"
    ]
   },
   {
@@ -524,7 +607,8 @@
     "    print(\"get throughput\")\n",
     "    val = config.throughput_keyword\n",
     "    index = int(config.throughput_index)\n",
-    "    line = perfp.read_throughput(used_logpath, keyword=val, index=index)\n",
+    "    splitter = config.throughput_splitter\n",
+    "    line = perfp.read_throughput(used_logpath, keyword=val, index=index, splitter=splitter)\n",
     "    if line!=None:\n",
     "        throughput=line\n",
     "        print(throughput)\n",
@@ -563,9 +647,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logfile = open(used_logpath)\n",
-    "logout = logfile.read()\n",
-    "print(logout)"
+    "print_out_log = False\n",
+    "if print_out_log is True:\n",
+    "    logfile = open(used_logpath)\n",
+    "    logout = logfile.read()\n",
+    "    print(logout)"
    ]
   },
   {
@@ -602,6 +688,13 @@
     "## Repeat Sections 1 and 2 on different Jupyter kernel\n",
     "Users can find information in docs/notebooks/perf_analysis/README.md for switching among different Juypter kernels.  \n",
     "> Go back Section 1 by clicking the link : [Section 1](#section_1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AR TODO: write an error handling to make sure that Step5 only runs when we have two results"
    ]
   },
   {
@@ -650,7 +743,7 @@
     "from profiling.profile_utils import CommonUtils\n",
     "utils = CommonUtils()\n",
     "\n",
-    "if timeline_paths != []:\n",
+    "if timeline_paths != [] and len(timeline_paths) >= 2:\n",
     "    timeline_dir_path = os.environ['ModelZooRoot']+os.sep + \"docs/notebooks/perf_analysis\" + os.sep + \"Timeline\"\n",
     "    if os.path.isfile(timeline_dir_path) == False:\n",
     "        os.mkdir(timeline_dir_path)\n",
@@ -658,9 +751,9 @@
     "        shutil.move(path,timeline_dir_path)\n",
     "    # rename Timeline folder with topo and time info   \n",
     "    timeinfo = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M\")\n",
-    "    target_path = timeline_dir_path+'_'+timeinfo\n",
+    "    target_path = timeline_dir_path + '_' + topology_name + '_' + timeinfo\n",
     "    shutil.move(timeline_dir_path, target_path)\n",
-    "    print(target_path)"
+    "    print(\"Successfully gather all results in \",target_path)"
    ]
   },
   {
@@ -687,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
