--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_timeline_analysis.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_timeline_analysis.ipynb
@@ -129,7 +129,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FdIndex = 0"
+    "# use the \"FD_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_fd_index=os.environ.get('FD_INDEX', '')\n",
+    "if env_fd_index != '':\n",
+    "    FdIndex= int(env_fd_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    FdIndex= int(input('Input a index number of a folder: '))"
    ]
   },
   {
@@ -214,10 +221,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# perfomance baseline \n",
-    "Baseline_Index=0\n",
+    "# use the \"BASELINE_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_baseline_index=os.environ.get('BASELINE_INDEX', '')\n",
+    "if env_baseline_index != '':\n",
+    "    Baseline_Index= int(env_baseline_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    Baseline_Index= int(input('Input a index number of a Performance Baseline: '))\n",
+    "\n",
     "# comparison target\n",
-    "Comparison_Index=1"
+    "env_comparison_index=os.environ.get('COMPARISON_INDEX', '')\n",
+    "if env_comparison_index != '':\n",
+    "    Comparison_Index= int(env_comparison_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    Comparison_Index= int(input('Input a index number of a Performance Comparison: '))\n"
    ]
   },
   {
@@ -359,7 +378,7 @@
    "source": [
     "### Step 4: Merge two CSV files and caculate the speedup accordingly\n",
     "Users can check column \"speedup\" for the speedup from bfloat16 or int8.  \n",
-    "If the operation uses mkl-dnn/oneDNN for acceleration, the \"mkl_op\" column should be marked as \"True\". \n"
+    "If the operation uses oneDNN for acceleration, the \"mkl_op\" column should be marked as \"True\". \n"
    ]
   },
   {
@@ -555,13 +574,13 @@
    "metadata": {},
    "source": [
     "<a id='section_2_2'></a>\n",
-    "## Section 2.2: Analyze oneDNN/MKLDNN debug logs and JIT dumps\n",
+    "## Section 2.2: Analyze oneDNN debug logs and JIT dumps\n",
     "\n",
-    ">NOTE: Section 2.2 is only relevant if user had MKLDNN_VERBOSE or MKLDNN_JIT_DUMP enabled\n",
+    ">NOTE: Section 2.2 is only relevant if user had DNNL_VERBOSE or DNNL_JIT_DUMP enabled\n",
     "\n",
     "### Step 1: Parse related oneDNN Verbose logs\n",
     "\n",
-    ">NOTE: Step 1-3 is only relevant if user had MKLDNN_VERBOSE enabled."
+    ">NOTE: Step 1-3 is only relevant if user had DNNL_VERBOSE enabled."
    ]
   },
   {
@@ -660,7 +679,7 @@
    "source": [
     "### Step 4: Inspect JIT Kernel \n",
     "\n",
-    ">NOTE: Step 4 is only relevant if user had MKLDNN_JIT_DUMP enabled\n",
+    ">NOTE: Step 4 is only relevant if user had DNNL_JIT_DUMP enabled\n",
     "\n",
     "In this section, we analyze dump JIT files of the comparison data type.    \n",
     "Users should be able to see the exact CPU instruction usage like VNNI or BF16 from those JIT Dump files."
@@ -698,10 +717,10 @@
     "        result.append(filename)\n",
     "result.sort()\n",
     "\n",
-    "index =0 \n",
+    "jit_fd_index =0 \n",
     "for folder in result:\n",
-    "    print(\" %d : %s \" %(index, folder))\n",
-    "    index+=1"
+    "    print(\" %d : %s \" %(jit_fd_index, folder))\n",
+    "    jit_fd_index+=1"
    ]
   },
   {
@@ -718,7 +737,16 @@
    "outputs": [],
    "source": [
     "## USER INPUT\n",
-    "FdIndex=0"
+    "FdIndex = 0 \n",
+    "# use the \"FD_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_jit_fd_index=os.environ.get('JIT_FD_INDEX', '')\n",
+    "if env_jit_fd_index != '':\n",
+    "    FdIndex= int(env_jit_fd_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    if jit_fd_index > 0:\n",
+    "        FdIndex= int(input('Input a index number of a JIT folder: '))"
    ]
   },
   {
@@ -737,14 +765,14 @@
     "if FdIndex < len(result):\n",
     "    logfile = result[FdIndex]\n",
     "    os.environ[\"JITFILE\"] = jitdumps_fd_path[1]+os.sep+logfile\n",
+    "    print(os.environ[\"JITFILE\"])\n",
     "if tags[1] == 'f32':\n",
     "    os.environ[\"DNNL_ISA_KEYWORD\"] = \"zmm\"\n",
     "elif tags[1] == 'int8':\n",
     "    os.environ[\"DNNL_ISA_KEYWORD\"] = \"vpdpbusd\"\n",
-    "elif tags[1] == 'bf16':\n",
+    "elif tags[1] == 'bf16' or tags[1] == 'bfloat16':\n",
     "    os.environ[\"DNNL_ISA_KEYWORD\"] ='vdpbf16ps|vcvtne2ps2bf16'\n",
     "    \n",
-    "print(os.environ[\"JITFILE\"])\n",
     "print(os.environ[\"DNNL_ISA_KEYWORD\"])"
    ]
   },
@@ -840,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
