--- a/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#  Tensorflow Timeline Analysis on Model Zoo Benchmark between Intel optimized and stock Tensorflow\n",
     "\n",
-    "This jupyter notebook will help you evaluate performance benefits from Intel-optimized Tensorflow on the level of Tensorflow operations via several pre-trained models from Intel Model Zoo. The notebook will show users a bar chart like the picture below for the Tensorflow operation level performance comparison. The red horizontal line represents the performance of Tensorflow operations from Stock Tensorflow, and the blue bars represent the speedup of Intel Tensorflow operations. The operations marked as \"mkl-True\" are accelerated by MKL-DNN a.k.a oneDNN, and users should be able to see a good speedup for those operations accelerated by MKL-DNN. \n",
+    "This jupyter notebook will help you evaluate performance benefits from Intel-optimized Tensorflow on the level of Tensorflow operations via several pre-trained models from Intel Model Zoo. The notebook will show users a bar chart like the picture below for the Tensorflow operation level performance comparison. The red horizontal line represents the performance of Tensorflow operations from Stock Tensorflow, and the blue bars represent the speedup of Intel Tensorflow operations. The operations marked as \"mkl-True\" are accelerated by oneDNN a.k.a MKL-DNN, and users should be able to see a good speedup for those operations accelerated by oneDNN. \n",
     "> NOTE : Users need to get Tensorflow timeline json files from other Jupyter notebooks like benchmark_perf_comparison\n",
     "  first to proceed this Jupyter notebook."
    ]
@@ -152,7 +152,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FdIndex = 0"
+    "# use the \"FD_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_fd_index=os.environ.get('FD_INDEX', '')\n",
+    "if env_fd_index != '':\n",
+    "    FdIndex= int(env_fd_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    FdIndex= int(input('Input a index number of a folder: '))"
    ]
   },
   {
@@ -222,7 +229,14 @@
    "outputs": [],
    "source": [
     "## USER INPUT\n",
-    "file_index=0\n",
+    "# use the \"FILE_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_file_index=os.environ.get('FILE_INDEX', '')\n",
+    "if env_file_index != '':\n",
+    "    file_index= int(env_file_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    file_index= int(input('Input a index number of a file: '))\n",
     "\n",
     "fn = datafiles[file_index]\n",
     "tfile_prefix = fn.split('_')[0]\n",
@@ -313,7 +327,7 @@
     "## Section 1.2: Analyze TF Timeline results between Stock and Intel Tensorflow\n",
     "> NOTE : Users could also compare elapsed time of TF ops among any two different TF timeline files.\n",
     "\n",
-    "### Speedup from MKL-DNN among different TF operations"
+    "### Speedup from oneDNN among different TF operations"
    ]
   },
   {
@@ -356,9 +370,16 @@
    "outputs": [],
    "source": [
     "# perfomance baseline \n",
-    "Baseline_Index=1\n",
+    "# use the \"BASELINE_INDEX\" environment variable value if it exists.\n",
+    "import os\n",
+    "env_baseline_index=os.environ.get('BASELINE_INDEX', '')\n",
+    "if env_baseline_index != '':\n",
+    "    Baseline_Index= int(env_baseline_index)\n",
+    "else:\n",
+    "    ## USER INPUT\n",
+    "    Baseline_Index= int(input('Input a index number of a Performance Baseline: '))\n",
     "# comparison target\n",
-    "Comparison_Index=0"
+    "Comparison_Index = 0 if Baseline_Index else 1"
    ]
   },
   {
@@ -371,7 +392,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "selected_datafiles = []\n",
@@ -396,6 +419,7 @@
     "%matplotlib agg\n",
     "from profiling.profile_utils import TFTimelinePresenter\n",
     "csvfiles=[]\n",
+    "percentage_filename = ''\n",
     "\n",
     "tfp = TFTimelinePresenter(True)\n",
     "for fn in selected_datafiles:\n",
@@ -411,7 +435,26 @@
     "    csvfiles.append(csvpath)\n",
     "    timeline_pd = tfp.postprocess_timeline(tfp.read_timeline(fn))\n",
     "    timeline_pd = timeline_pd[timeline_pd['ph'] == 'X']\n",
-    "    tfp.get_tf_ops_time(timeline_pd,fn,tfile_prefix)"
+    "    sitems, percentage_filename = tfp.get_tf_ops_time(timeline_pd,fn,tfile_prefix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of  oneDNN operations from Intel TF "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "if percentage_filename != '':\n",
+    "    print(percentage_filename)\n",
+    "    tfp.plot_pie_chart(percentage_filename, 'mkl_percentage')"
    ]
   },
   {
@@ -707,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
