Update docs for the BERT Classifier fine tuning notebook to reference the movie review dataset paper (#145)

--- a/docs/notebooks/bert_classifier_fine_tuning/BERT_Classifier_fine_tuning_using_IMDB.ipynb
+++ b/docs/notebooks/bert_classifier_fine_tuning/BERT_Classifier_fine_tuning_using_IMDB.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "This notebook uses the BERT BFloat16 classifier training scripts from the model zoo to\n",
     "do fine tuning. The [IMDB dataset](https://ai.stanford.edu/~amaas/data/sentiment/)\n",
-    "is used to do sentiment analysis on movie reviews.\n",
+    "is used to do sentiment analysis on movie reviews. For more information on the large movie\n",
+    "review dataset, please see the [ACL 2011 paper](https://aclanthology.org/P11-1015/).\n",
     "\n",
     "Steps:\n",
     "1. [Download the IMDB dataset](#Download-the-IMDB-dataset)\n",
