--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -124,7 +124,7 @@
     "print (\"We are using Tensorflow version\", tf.__version__)\n",
     "major_version = int(tf.__version__.split(\".\")[0])\n",
     "if major_version >= 2:\n",
-    "   from tensorflow.python import _pywrap_util_port\n",
+    "   from tensorflow.python.util import _pywrap_util_port\n",
     "   print(\"oneDNN enabled:\", _pywrap_util_port.IsMklEnabled())\n",
     "else:\n",
     "   print(\"oneDNN enabled:\", tf.pywrap_tensorflow.IsMklEnabled())"
