--- a/docs/notebooks/bert_classifier_fine_tuning/BERT_Classifier_fine_tuning_using_IMDB.ipynb
+++ b/docs/notebooks/bert_classifier_fine_tuning/BERT_Classifier_fine_tuning_using_IMDB.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# BERT Classifier Fine Tuning using IMDB Movie Reviews\n",
     "\n",
-    "This notebook uses the BERT BFloat16 classifier training scripts from the model zoo to\n",
+    "This notebook uses the BERT classifier training scripts from the model zoo to\n",
     "do fine tuning. The [IMDB dataset](https://ai.stanford.edu/~amaas/data/sentiment/)\n",
     "is used to do sentiment analysis on movie reviews. For more information on the large movie\n",
     "review dataset, please see the [ACL 2011 paper](https://aclanthology.org/P11-1015/).\n",
@@ -17,7 +17,8 @@
     "3. [Download the BERT pretrained model checkpoints](#Download-the-BERT-pretrained-model-checkpoints)\n",
     "3. [BERT classifier fine tuning using the IMDB tsv files](#BERT-classifier-fine-tuning-using-the-IMDB-tsv-files)\n",
     "4. [Export the saved model](#Export-the-saved-model)\n",
-    "5. [Load the saved model and make predictions](#Load-the-saved-model-and-make-predictions)"
+    "5. [Load the saved model and make predictions](#Load-the-saved-model-and-make-predictions)\n",
+    "6. [Quantization using the Intel® Neural Compressor](#Quantization)"
    ]
   },
   {
@@ -89,10 +90,11 @@
     "    os.environ[\"OUTPUT_DIR\"] = os.path.join(os.environ[\"HOME\"], \"bert_classifier_output\")\n",
     "\n",
     "# The number of reviews to use for training (the IMDB dataset has 25,000 training reviews)\n",
-    "num_train_reviews = 1000\n",
+    "# Increasing the number of examples used can improve accuracy, but will also increase training time\n",
+    "num_train_reviews = 3000\n",
     "\n",
     "# The number of reviews to use for evaluation (the IMDB dataset has 25,000 training reviews)\n",
-    "num_test_reviews = 1000\n",
+    "num_test_reviews = 3000\n",
     "\n",
     "# The number of training epochs to run\n",
     "num_train_epochs = 1\n",
@@ -104,7 +106,11 @@
     "learning_rate = \"3e-5\"\n",
     "\n",
     "# Maximum total input sequence length after WordPiece tokenization (longer sequences will be truncated)\n",
-    "max_seq_length = 128"
+    "max_seq_length = 128\n",
+    "\n",
+    "# Precision (fp32 or bfloat16)\n",
+    "# If the model is trained using FP32, the neural compressor can be used to quantize the model after training\n",
+    "precision = \"fp32\""
    ]
   },
   {
@@ -119,6 +125,8 @@
     "if not os.path.isdir(model_zoo_dir):\n",
     "    raise ValueError(\"The model zoo directory ({}) does not exist. This directory should \"\n",
     "                     \"have a clone of the model zoo repo.\".format(model_zoo_dir))\n",
+    "sys.path.append(os.path.join(model_zoo_dir, \"models\", \"language_modeling\", \"tensorflow\",\n",
+    "                             \"bert_large\", \"training\", precision))\n",
     "\n",
     "# Location where the bert base uncased checkpoints will be downloaded and extracted\n",
     "bert_base_checkpoint_dir = os.environ[\"CHECKPOINT_DIR\"]\n",
@@ -275,7 +283,7 @@
    "source": [
     "## BERT classifier fine tuning using the IMDB tsv files\n",
     "\n",
-    "Run the `launch_benchmark.py` script to run BERT BFloat16 training using the BERT base uncased_L-12_H-768_A-12 checkpoints that were just downloaded as the initial checkpoints. The directory with the IMDB tsv files that were created earlier are used as the dataset directory. Checkpoints that are generated during training will be written to the `OUTPUT_DIR`."
+    "Run the `launch_benchmark.py` script to run BERT training using the BERT base uncased_L-12_H-768_A-12 checkpoints that were just downloaded as the initial checkpoints. The directory with the IMDB tsv files that were created earlier are used as the dataset directory. Checkpoints that are generated during training will be written to the `OUTPUT_DIR`."
    ]
   },
   {
@@ -288,7 +296,8 @@
     "os.environ[\"NUM_TRAIN_EPOCHS\"] = str(num_train_epochs)\n",
     "os.environ[\"BATCH_SIZE\"] = str(batch_size)\n",
     "os.environ[\"LEARNING_RATE\"] = str(learning_rate)\n",
-    "os.environ[\"MAX_SEQ_LENGTH\"] = str(max_seq_length)"
+    "os.environ[\"MAX_SEQ_LENGTH\"] = str(max_seq_length)\n",
+    "os.environ[\"PRECISION\"] = precision"
    ]
   },
   {
@@ -300,7 +309,7 @@
     "%%time\n",
     "!python ${MODEL_ZOO_DIR}/benchmarks/launch_benchmark.py \\\n",
     "  --model-name=bert_large \\\n",
-    "  --precision=bfloat16 \\\n",
+    "  --precision=${PRECISION} \\\n",
     "  --mode=training \\\n",
     "  --framework=tensorflow \\\n",
     "  --batch-size=${BATCH_SIZE} \\\n",
@@ -356,9 +365,10 @@
     "!python ${MODEL_ZOO_DIR}/models/language_modeling/tensorflow/bert_large/inference/export_classifier.py \\\n",
     "  --task_name=cola \\\n",
     "  --output_dir=${OUTPUT_DIR} \\\n",
-    "  --precision=bfloat16 \\\n",
+    "  --precision=${PRECISION} \\\n",
     "  --bert_config_file=${CHECKPOINT_DIR}/uncased_L-12_H-768_A-12/bert_config.json \\\n",
-    "  --saved_model"
+    "  --saved_model \\\n",
+    "  --signature_def_name=\"serving_default\""
    ]
   },
   {
@@ -409,9 +419,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(os.path.join(os.environ[\"MODEL_ZOO_DIR\"], \"models\", \"language_modeling\",\n",
-    "                             \"tensorflow\", \"bert_large\", \"training\", \"bfloat16\"))\n",
-    "\n",
     "import tokenization\n",
     "from run_classifier import InputExample\n",
     "from run_classifier import convert_examples_to_features\n",
@@ -482,8 +489,8 @@
     "tf_segment_ids = tf.constant(all_segment_ids, shape=[num_examples, max_seq_length], dtype=tf.int32)\n",
     "tf_label_ids = tf.constant(all_label_ids, shape=[num_examples], dtype=tf.int32)\n",
     "\n",
-    "# Use the 'eval' signature from the reloaded model to do predictions on our using the feature lists\n",
-    "results = reloaded_model.signatures[\"eval\"](\n",
+    "# Use the serving_default signature from the reloaded model to do predictions on our using the feature lists\n",
+    "results = reloaded_model.signatures[\"serving_default\"](\n",
     "    input_ids=tf_input_ids, input_mask=tf_input_mask, segment_ids=tf_segment_ids, label_ids=tf_label_ids)\n",
     "\n",
     "# Print the results\n",
@@ -493,11 +500,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantization\n",
+    "\n",
+    "Install the [Intel® Neural Compressor](https://github.com/intel/neural-compressor) to use for tuning and quantization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%env DEBIAN_FRONTEND=noninteractive\n",
+    "!apt-get update && apt-get install -y  build-essential python3-opencv python3-dev \n",
+    "!pip install neural-compressor\n",
+    "%env TF_ENABLE_MKL_NATIVE_FORMAT=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Navigate to the BERT IMDB fine tuning notebook directory, which has the `quantize.py` script and the config yaml file, that will be used by the neural compressor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cd ${MODEL_ZOO_DIR}/docs/notebooks/bert_classifier_fine_tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "!PYTHONPATH=${MODEL_ZOO_DIR}/models/language_modeling/tensorflow/bert_large/training/${PRECISION} \\\n",
+    " python quantize.py \\\n",
+    "  --config-yaml=${MODEL_ZOO_DIR}/docs/notebooks/bert_classifier_fine_tuning/imdb.yaml \\\n",
+    "  --vocab-file=${CHECKPOINT_DIR}/uncased_L-12_H-768_A-12/vocab.txt \\\n",
+    "  --tsv-dir ${DATASET_DIR}/imdb_tsv \\\n",
+    "  --max-seq-length ${MAX_SEQ_LENGTH} \\\n",
+    "  --output-dir ${OUTPUT_DIR}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After quantization is complete, the `OUTPUT_DIR/quantized` folder has the saved model file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l $OUTPUT_DIR/quantized"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll load the the quantized model from the `OUTPUT_DIR/quantized` folder, and run predictions using the same feature lists that were setup earlier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantized_model = tf.saved_model.load(os.path.join(output_dir, \"quantized\"))\n",
+    "\n",
+    "# Use the serving_default signature from the reloaded model to do predictions on our using the feature lists\n",
+    "results = quantized_model.signatures[\"serving_default\"](\n",
+    "    input_ids=tf_input_ids, input_mask=tf_input_mask, segment_ids=tf_segment_ids, label_ids=tf_label_ids)\n",
+    "\n",
+    "# Print the results\n",
+    "for (i, sentence) in enumerate(movie_reviews):\n",
+    "    print(\"Movie review:\\t{}\".format(sentence))\n",
+    "    print(\"Prediction:\\t{}\\n\".format(labels[results[\"loss/Softmax\"][i].numpy().argmax()]))"
+   ]
   }
  ],
  "metadata": {
